--- a/example.html
+++ b/example.html
@@ -6,7 +6,6 @@
 		<meta charset=utf-8></meta>
 	</head>
 	<body>
-		Here is the board &quot; &amp;quot;:
 		<div id=board1></div>
 	</body>
 	<script>
@@ -16,14 +15,12 @@
 			/* CSS selector for the containing div element. */
 			containerSelector : '#board1',
 			/* Scale the board size, for example 0.5 is half size. */
-			scale : 0.8,
+			scale : 1.0,
 			/* Position to draw, format is p:m,
 			 * where p is the GNU Backgammon Position ID
 			 * and m is the GNU Backgammon Match ID.
 			*/
-			gnuid :	'AMAAmLkFSEgBAA:UQmyAAAAAAAE'
+			gnuid : '+3wAAERs6wLCAA:UgmuAAAACAAE'
 		});
-		/* Remember to call drawBoard() in order to actually draw the board. */
-		bgBoard1.drawBoard();
 	</script>
 </html>
