--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
 			 * where p is the GNU Backgammon Position ID
 			 * and m is the GNU Backgammon Match ID.
 			*/
-			gnuid : '+3wAAERs6wLCAA:UgmuAAAACAAE'
+			gnuid : 'jfoajsiojoi:afjojfioa'
 		});
 	</script>
 </html>
