--- a/example.html
+++ b/example.html
@@ -20,7 +20,7 @@
 			 * where p is the GNU Backgammon Position ID
 			 * and m is the GNU Backgammon Match ID.
 			*/
-			gnuid : 'foo:bar'
+			gnuid : 'z10HACDatglkAA:8ImkABAAIAAE'
 		});
 	</script>
 </html>
